--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+/*
+    1. Screen Home
+      - Header
+      - Quick menu
+    2. Screen survey 1
+    3. Screen survey 2
+ */
+
 @font-face {
     font-family: Suite;
     src: url("font/suitepersonaluse.ttf");
@@ -72,7 +80,9 @@ body {
     left: calc(50% - 1000px/2 - 1px);
     max-width: 1000px;
 }
+
 /*__________________Header______________________ */
+
 .container-header {
     background: white;
     height: 72px;
@@ -126,8 +136,9 @@ body {
     font-size: 14px;
     align-self: center;
 }
-/*__________________End Header______________________ */
+
 /*___________________Menu____________________________*/
+
 .menu {
     width: 84px;
     height: 368px;
@@ -191,10 +202,8 @@ body {
     width: 14px;
 }
 
-/*_______________End Menu____________________________*/
-/**_________________________________End Screen Home _________________________________________________*/
+/*______________________________________Quick-menu__________________________________________________*/
 
-/*______________________________________quick-menu__________________________________________________*/
 .quick-menu {
     background-color: #1E85FF;
     height: 147px;
@@ -226,10 +235,111 @@ body {
     text-align: center;
     color: #FFFFFF;
 }
-/*__________________________________End quick-menu__________________________________________________*/
-
-/**_____________________________________Screen two _________________________________________________*/
-.screen-two {
-    background: red;
+/**_____________________________________Screen survey 1 _________________________________________________*/
+.screen-survey1 {
+    height: 970px;
+    background: white;
 }
-/**_________________________________End Screen two _________________________________________________*/
+.text-question-survey1 {
+    font-family: 'SUITE';
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 130%;
+    color: #333333;
+}
+.text-answer-survey1 {
+    height: 258px;
+    font-family: 'SUITE';
+    font-weight: 800;
+    font-size: 72px;
+    line-height: 120%;
+    letter-spacing: -0.02em;
+    color: #333333;
+}
+.text-answer-survey2 {
+    background: linear-gradient(to right, #EB15FE, #FA3158);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.container-survey1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 970px;
+    align-items: center;
+}
+.box-survey {
+    margin-right: 75px;
+}
+.content-reason {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 140%;
+    margin: 12px 0 0 0;
+    width: 100%;
+    max-width: 476px;
+    display: flex;
+    align-items: center;
+    letter-spacing: -1.5px;
+    color: #000000;
+}
+.container-information {
+    display: flex;
+    flex-direction: row;
+    width: 648px;
+    height: 189px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    align-items: center;
+}
+.box-information {
+    display: flex;
+    flex-direction: column;
+}
+.content-information {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+.img-avt-user {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin-right: 20px;
+}
+.btn-information {
+    display: flex;
+    flex-direction: row;
+    padding: 6px 12px;
+    border: none;
+    height: 34px;
+    align-items: center;
+    background: #FA3158;
+    border-radius: 100px;
+    font-family: 'pretendard';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color: #FFFFFF;
+
+}
+.username {
+    font-family: 'pretendard';
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 140%;
+    letter-spacing: -0.03em;
+    color: #1A191E;
+    margin: 0 8px 0 12px;
+}
+.nameschool {
+    font-family: 'pretendard';
+    font-weight: 500;
+    font-size: 14px;
+    margin: 0;
+    line-height: 150%;
+    color: rgba(26, 25, 30, 0.5);
+}
