--- a/index.css
+++ b/index.css
@@ -394,4 +394,60 @@ body {
     flex-direction: row;
     align-items: center;
 }
+/*_______________________Screen Cta ________________________*/
 
+.screen-cta {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 308px;
+    align-items: center;
+    background: linear-gradient(271.03deg, #1E85FF 0%, #57A4FF 100%);
+}
+.text-waring {
+    font-family: 'SUITE';
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
+}
+.btn-cta {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 16px 35px;
+    gap: 10px;
+    width: 229px;
+    height: 59px;
+    background: #FFFFFF;
+    border-radius: 8px;
+}
+.text-btn {
+    font-family: 'pretendard';
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: #57A4FF;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/*_______________________Screen footer ________________________*/
+.screen-footer {
+    background: #333333;
+    height: 349px;
+    display: flex;
+    justify-content: center;
+}
+.container-footer {
+    max-width: 1290px;
+    width: 100%;
+    height: 139px;
+    margin-top: 60px;
+    display: flex;
+    background: white;
+    align-items: center;
+}
