--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ body {
     max-width: 1000px;
 }
 
-/*__________________Header______________________ */
+/*____________________________________Header________________________________________ */
 
 .container-header {
     background: white;
@@ -165,7 +165,7 @@ body {
     align-self: center;
 }
 
-/*___________________Menu____________________________*/
+/*_____________________________________Menu______________________________________________*/
 
 .menu {
     width: 84px;
@@ -357,7 +357,7 @@ body {
     color: rgba(26, 25, 30, 0.5);
 }
 
-/**_____________________________________Screen survey 2 _________________________________________________*/
+/**_______________________________________________________Screen survey 2 ___________________________________________________________________*/
 .screen-survey2 {
     background-color: #FF728D;
     height: 1194px;
@@ -408,7 +408,7 @@ body {
     align-items: center;
 }
 
-/*_______________________Screen section 03 ________________________*/
+/*_________________________________________Screen section 03 __________________________________________*/
 .section-03 {
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F7F7F7;
     height: 1467px;
@@ -499,7 +499,7 @@ body {
     left: calc(50% - 35px/2 + 0.5px);
     top: calc(50% - 26.98px/2 + 0.49px);
 }
-.title-item1 {
+.title-item1-section3 {
     font-family: 'SUITE';
     font-style: normal;
     font-weight: 900;
@@ -509,7 +509,7 @@ body {
     color: #333333;
     margin: 126px 0 0 47px;
 }
-.content-item1 {
+.content-item1-section03 {
     font-family: 'Pretendard';
     font-style: normal;
     margin: 14px 0 0 47px;
@@ -530,7 +530,7 @@ body {
     box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.2);
     border-radius: 16px;
 }
-.content-item2 {
+.content-item2-section03 {
     font-family: 'Pretendard';
     font-style: normal;
     font-weight: 400;
@@ -541,7 +541,7 @@ body {
     margin-left: 47px;
     margin-top: 14px;
 }
-.title-item2 {
+.title-item2-section03 {
     font-family: 'SUITE';
     font-style: normal;
     font-weight: 900;
@@ -562,7 +562,7 @@ body {
     filter: drop-shadow(50px 50px 100px rgba(0, 0, 0, 0.2));
     border-radius: 24px;
 }
-/*_______________________Screen section 04 ________________________*/
+/*_________________________________________Screen section 04 __________________________________________*/
 .section-04 {
     height: 1351px;
     background: #F7F7F7;
@@ -619,7 +619,7 @@ body {
     width: 437px;
     height: 321px;
 }
-/*_______________________Screen section 05 ________________________*/
+/*_________________________________________Screen section 05 __________________________________________*/
 .section-05 {
     display: flex;
     flex-direction: row;
@@ -669,7 +669,7 @@ body {
     flex-grow: 0;
 }
 
-/*_______________________Screen section 06 ________________________*/
+/*_________________________________________Screen section 06 __________________________________________*/
 .section-06 {
     display: flex;
     flex-direction: row-reverse;
@@ -700,7 +700,7 @@ body {
     height: 452px;
 }
 
-/*_______________________Screen section 07 ________________________*/
+/*_________________________________________Screen section 07 __________________________________________*/
 .section-07 {
     height: 1694px;
     background: #FFFFFF;
@@ -945,7 +945,7 @@ body {
     letter-spacing: -0.03em;
     color: #1A191E;
 }
-/*_______________________Screen section 08 ________________________*/
+/*_________________________________________Screen section 08 __________________________________________*/
 .section-08 {
     height: 1418px;
     background: #FFFFFF;
@@ -1024,7 +1024,7 @@ body {
 }
 
 
-/*_______________________Screen section 09 ________________________*/
+/*_________________________________________Screen section 09 __________________________________________*/
 .section-09 {
     background: url("image/background_home.png");
     background-repeat: no-repeat;
@@ -1057,7 +1057,7 @@ body {
 .img_chart {
     margin-top: 100px;
 }
-/*_______________________Screen brand ________________________*/
+/*_________________________________________Screen brand __________________________________________*/
 .screen-brand {
     height: 1504px;
     background: #FFFFFF;
@@ -1161,7 +1161,7 @@ body {
     width: 125px;
     height: 114px;
 }
-/*_______________________Screen Cta ________________________*/
+/*_________________________________________Screen Cta __________________________________________*/
 
 .screen-cta {
     display: flex;
@@ -1169,7 +1169,22 @@ body {
     justify-content: space-around;
     height: 308px;
     align-items: center;
-    background: linear-gradient(271.03deg, #1E85FF 0%, #57A4FF 100%);
+    width: 100%;
+    position: relative;
+}
+.content-cta {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 308px;
+    background: none;
+    align-items: center;
+    width: 100%;
+}
+.img-cta {
+    width: 100%;
+    height: 308px;
 }
 .text-waring {
     font-family: 'SUITE';
@@ -1202,7 +1217,7 @@ body {
     align-items: center;
     justify-content: center;
 }
-/*_______________________Screen footer ________________________*/
+/*_________________________________________Screen footer __________________________________________*/
 .screen-footer {
     background: #333333;
     height: 349px;
@@ -1215,6 +1230,77 @@ body {
     height: 139px;
     margin-top: 60px;
     display: flex;
-    background: white;
     align-items: center;
+}
+.box-logo-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 298px;
+    height: 139px;
+
+}
+.text-footer {
+    font-family: 'SUITE';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
+    opacity: 0.5;
+}
+.box-netword-footer {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px;
+    gap: 4px;
+    margin: 38px 0 0 0;
+    width: 98px;
+    height: 30px;
+}
+.text-header-footer {
+    font-family: 'SUITE';
+    font-style: normal;
+    font-weight: 700;
+    margin: 0 ;
+    font-size: 16px;
+    line-height: 120%;
+    color: #FFFFFF;
+}
+.header-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 32px;
+    height: 19px;
+}
+.container-footer-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 32px;
+    width: 894px;
+    height: 139px;
+}
+.text-content-footer {
+    font-family: 'Pretendard';
+    font-style: normal;
+    font-weight: 400;
+    margin: 4px 0;
+    font-size: 14px;
+    line-height: 16px;
+    opacity: 0.5;
+    letter-spacing: -0.02em;
+    font-feature-settings: 'ss05' on;
+    color: #FFFFFF;
+}
+.box-footer-text {
+    display: flex;
+    flex-direction: row;
 }
